# quant-tool

./: .gitignore  README.md  TASK.md  package.json  pnpm-lock.yaml
apps/desktop/: P0.md  P1.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/scripts/: with-toolchain.sh
apps/desktop/src/: App.test.ts  App.vue  bridge.ts  styles.css  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: eastmoney.rs  lib.rs  main.rs  quant_service.rs
apps/desktop/src/components/: TechnicalPatternChart.vue
data/: README.md
services/quant/: P2.md  P3.md  openapi.json  pyproject.toml
services/quant/scripts/: export_openapi.py  run_p2_real.py  run_p3_demo.py  run_p3_real.py
services/quant/src/quant_service/: __init__.py  __main__.py  main.py  mock_diagnosis.py  models.py
services/quant/src/quant_service/data/: __init__.py  factors.py  pipeline.py  protocol.py  store.py  types.py
services/quant/src/quant_service/data/providers/: __init__.py  akshare_sina.py
services/quant/src/quant_service/research/: __init__.py  backtest.py  current.py  demo.py  metrics.py  models.py  portfolio.py  real.py  technical.py  types.py  walk_forward.py
services/quant/tests/: conftest.py  test_api.py  test_backtest.py  test_current_signal.py  test_p2_factors.py  test_p2_pipeline.py  test_p2_provider.py  test_research_metrics.py  test_technical.py  test_walk_forward.py
