[project]
name = "quant-service"
version = "0.5.0"
description = "Local-only quantitative diagnosis service for the desktop companion"
requires-python = ">=3.12,<3.13"
dependencies = [
    "akshare>=1.18.40,<2",
    "fastapi",
    "lightgbm>=4.7,<5",
    "numpy>=2.4,<3",
    "pandas>=3,<4",
    "scikit-learn>=1.8,<2",
    "uvicorn",
]

[dependency-groups]
dev = [
    "httpx",
    "pytest",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/quant_service"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
