[package]
name = "quant-companion"
version = "0.1.0"
description = "东方财富 macOS 本地量化伴随侧栏 P0"
authors = ["quant-tool"]
edition = "2024"

[lib]
name = "quant_companion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
axuielement = "0.9"
regex = "1.11"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
