[package]
name = "quant-companion"
version = "0.1.0"
description = "东方财富 macOS 本地量化伴随侧栏"
authors = ["quant-tool"]
edition = "2024"

[lib]
name = "quant_companion_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
axuielement = "0.9"
regex = "1.11"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
uuid = { version = "1", features = ["v4"] }
